# rodeo_sample_game

./: .gitignore  .gitmodules  .vimrc  CMakeLists.txt  build_web  configure  configure_web  run  run_dbg  serve
assets/: aim.xcf  death_menu_art.xcf  demo.html  enemies.xcf  menu_art.xcf
external_assets/: death_menu_art.xcf  menu_art.xcf  shell.html
src/: bullet.c  bullet.h  compile_flags.txt  debug.c  debug.h  enemies.c  enemies.h  init.c  init.h  input.c  input.h  main.c  menu.c  menu.h  player.c  player.h  sprite.c  sprite.h  wall.c  wall.h
